# evidence-graph

./: .env.example  .gitignore  DESIGN-DOCUMENT.md  LICENSE.md  README.md  main.py  presentation.ipynb  pyproject.toml
.github/workflows/: ci.yml
src/agents/: claim_extractor.py  contradiction_hunter.py  graph_manager.py  query_architect.py  report_generator.py  skeptic.py
src/baseline/: pipeline.py
src/demo/: fixtures.py  run_demo.py
src/graph/: evidence_graph.py  schemas.py
src/orchestration/: state.py  workflow.py
src/tools/: arxiv_search.py  fetch_url.py  web_search.py
src/utils/: llm_client.py  logging.py
tests/: test_evidence_graph.py
